Correction on button alignment

--- a/prototype/_sass/components/_osc.scss
+++ b/prototype/_sass/components/_osc.scss
@@ -89,7 +89,7 @@
 	box-sizing: border-box;
 
 		.icon-cog,
-		.icon-plus-circle {
+		#button-new-session-quick {
 			float: right;
 			line-height: 1.8em;
 			margin-left: 0.5em;
